# hivekeep

./: .dockerignore  .env.desktop  .env.example  .env.mobile  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  HANDOFF.md  PLUGIN-DEVELOPMENT.md  PLUGIN-SPEC.md  README.md  api.md  avatars.json  calendar.md  capacitor.config.ts  config.md  contacts.md  docs-journal.md  email.md  files.md  idea.md  index.html  install.sh  interactive-setup.md  package.json  playwright.config.ts  projects.md  prompt-system.md  queenie.md  schema.md  sse.md  structure.md  vault-placeholders.md  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release-desktop.yml  release.yml  windows-desktop.yml
.husky/: pre-commit
android/: capacitor.settings.gradle
android/app/: build.gradle
de/: index.html
de/install/: index.html
de/plugins/: index.html
docker/: Dockerfile  entrypoint.sh
docs/: android-apk.md  local-review-agents.md  plugins.md  projects.md  sitemap-0.xml  windows-desktop.md
docs-site/: astro.config.mjs  package-lock.json  package.json
es/: index.html
fr/: index.html
install/: index.html
it/: index.html
ja/: index.html
pl/: index.html
plugins/: index.html
pt-BR/: index.html
ru/: index.html
scripts/: diag-compacting.ts  fetch-models-dev.ts  hivekeep-local-review.ts  package-android-apk.mjs  seed-test-db.ts  sign-windows-tauri.ps1
site/: README.md  package.json
src/: test-helpers.ts
src-tauri/: Cargo.toml  sign-windows-tauri.cmd  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
zh-CN/: index.html
(+649 files in other folders)
