[package]
name = "hivekeep"
version = "1.9.0"
description = "Desktop shell for Hivekeep"
authors = ["marlburrow"]
license = "MIT"
repository = "https://github.com/MarlBurroW/hivekeep"
edition = "2021"
rust-version = "1.77.2"
default-run = "hivekeep"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
