[package]
name = "hivekeep"
version = "1.9.0"
description = "Desktop shell for Hivekeep"
authors = ["marlburrow"]
license = "MIT"
repository = "https://github.com/MarlBurroW/hivekeep"
edition = "2021"
rust-version = "1.77.2"
default-run = "hivekeep"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.150"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
